# foundry-assured

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  azure.yaml  copilotkit-events-1782388149381.json  copilotkit-events-1782388562287.json  foundry-assured-html-artifacts-strategy.md  foundry-helpdesk-spec.md  mkdocs.yml  requirements-docs.txt
apps/backend/: .dockerignore  .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml
apps/backend/app/: domains.py  main.py
apps/backend/cli/: provision_eval_rule.py  provision_guardrail.py  provision_memory.py
apps/backend/eval/: README.md  access_control_test.py  archetype_emit_test.py  artifact_mcp_reads_test.py  artifact_rbac_test.py  artifact_service_test.py  artifact_skills_test.py  artifact_store_test.py  artifact_studio_test.py  assertions.py  assurance.yaml  cockpit_acl_stamp_test.py  configured_mode_test.py  copilot_prompts_compose_test.py  credential_wiring_test.py  dockey_decode_test.py  domain_registry_test.py  domains_api_test.py  grounded_acl_roundtrip_test.py  grounded_archetype_roundtrip_test.py  grounded_payload_test.py  hosted_build_test.py  hosted_prompts_compose_test.py  native_snippet_test.py  prompts_equivalence_test.py  retrieval_acl_parity_test.py  retrieval_shape_test.py  run_eval.py  step0_grounded_citations_spike.py  step0_native_filter_probe.py  step0_searchindex_filter_probe.py  step0_searchindex_kb_acl_abtest.py  studio_wiki_prompts_compose_test.py  tenant_provider_test.py  test_attribution.py  test_copilot_service.py  test_detector.py  test_extract.py
(+431 files in other folders)
