[project]
name = "foundry-helpdesk-backend"
version = "0.1.0"
description = "Foundry Helpdesk backend — multi-agent workflow over AG-UI"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent-framework>=1.9.0",
    "agent-framework-ag-ui>=1.0.0rc5",
    "azure-ai-projects>=2.2.0",
    "azure-identity>=1.25.3",
    "azure-search-documents>=11.7.0b2",
    "azure-storage-blob>=12.20.0",
    "fastapi-azure-auth>=5.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "azure-monitor-opentelemetry>=1.8.8",
    "azure-data-tables>=12.7.0",
    "httpx>=0.28.1",
    # Declarative agent prompts (ADR-013) — pinned to a commit, not a branch:
    # DNA is pre-release (no PyPI dist yet), so the pin IS the version.
    "dna-sdk @ git+https://github.com/ruinosus/dna@3628a9ee0ccb17319f9f2e21605417ff8295ba2a#subdirectory=packages/sdk-py",
]

[tool.uv]
prerelease = "allow"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# Required for the dna-sdk git dependency (a "direct reference") above.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
